--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Weather Data API</title>
 </head>
 <body>
 <h1>Weather Data API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
 <p>URL format: http://127.0.0.1:5000/api/v1/10/19881025</p>
+{{data|safe}}
 </body>
 </html>
